--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-.DS_Store, .ipynb_checkpoints, __pycache__
-.DS_Store, .ipynb_checkpoints, __pycache__, index_files
+.DS_Store
+.ipynb_checkpoints
+index_files
+__pycache__
